--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.10.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
   },
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
+    "@types/react-router-dom": "^5.1.3",
     "autoprefixer": "^9.7.4",
     "postcss-cli": "^7.1.0",
     "tailwindcss": "^1.2.0"
