--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reach/dialog": "^0.8.6",
+    "@reach/tabs": "^0.8.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,8 +17,10 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
+    "react-inline-markdown": "^0.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-textarea-autosize": "^7.1.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -45,6 +48,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.9",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-textarea-autosize": "^4.3.5",
     "autoprefixer": "^9.7.4",
     "postcss-cli": "^7.1.0",
     "tailwindcss": "^1.2.0"
